| Bug #35797 | sr/nr can fail with error 827 or 62451 due to uninitialized variable | ||
|---|---|---|---|
| Submitted: | 3 Apr 2008 12:28 | Modified: | 14 Apr 2008 7:19 |
| Reporter: | Jonas Oreland | Email Updates: | |
| Status: | Closed | ||
| Category: | Server: Cluster | Severity: | S3 (Non-critical) |
| Version: | CGE-6.3.11 | OS: | Any |
| Assigned to: | Jonas Oreland | Target Version: | |
| Triage: | D3 (Medium) | ||
[3 Apr 2008 12:28]
Jonas Oreland
[3 Apr 2008 12:30]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/44851 ChangeSet@1.2589, 2008-04-03 14:30:16+02:00, jonas@perch.ndb.mysql.com +1 -0 ndb - bug#35797 initialize m_lcp_varpart_len in all branches
[12 Apr 2008 14:39]
Jon Stephens
Documented in the mysql-5.1.24-ndb-6.3.13 changelog as follows:
Node or system restarts could fail due an unitialized variable in the
DTUP kernel block. This issue was found in mysql-5.1.23-ndb-6.3.11.
Left status as Patch Pending, waiting for additional merges.
[14 Apr 2008 7:19]
Jon Stephens
Already documented, no further documentation required.
