ndb - bug#35797   initialize m_lcp_varpart_len in all branches